test/domains/sungeun/sparse/expand.good
expand.chpl:3: In function 'my_expand':
expand.chpl:4: error: expand not supported on sparse domains
